--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -35,7 +35,7 @@ body{
     border-radius: 1rem;
     color: var(--text-color);
     max-width: 20.4375rem;
-    padding: 1.5rem;
+    padding: 1.5rem 1.5rem ;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -55,7 +55,7 @@ body{
 }
 
 .card__body__heading{
-    font-size: 22px;
+    font-size: 1.375rem;
     margin: 0.67em 0;
 }
 
@@ -75,7 +75,7 @@ body{
 }
 
 .card__body__purchase-info{
-    margin-bottom: 16px;
+    margin-bottom: 1rem;
     justify-content: space-between;
 }
 
@@ -105,8 +105,8 @@ body{
 }
 
 .card__footer__author-img{
-    width: 33px;
-    height: 33px;
+    width: 2.0625rem;
+    height: 2.0625rem;
     border: 2px var(--highlight-text-color) solid;
     border-radius: 50%;
 }
@@ -114,7 +114,7 @@ body{
 .attribution { 
     padding-top: 1em;
     color:hsl(0, 0%, 100%);
-    font-size: 11px; 
+    font-size: 0.6875rem; 
     text-align: center;
  }
 
