changed the spacind between the heading and the paragraph

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -56,7 +56,8 @@ body{
 
 .card__body__heading{
     font-size: 1.375rem;
-    margin: 1em 0;
+    margin-bottom: 0.6em;
+    margin-top: 1em;
 }
 
 .card__body__text{
